<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin">

        <TextView
            android:id="@+id/tvImageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/dialog_margin"
            android:text="@string/image_size_label" />

        <Spinner
            android:id="@+id/spImageSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvImageSize"
            android:layout_toRightOf="@+id/tvImageSize"
            android:drawSelectorOnTop="true"
            android:entries="@array/image_size_arrays" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin">

        <TextView
            android:id="@+id/tvColorFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/dialog_margin"
            android:text="@string/color_filter_label" />

        <Spinner
            android:id="@+id/spColorFilter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvColorFilter"
            android:layout_toRightOf="@+id/tvColorFilter"
            android:drawSelectorOnTop="true"
            android:entries="@array/color_filter_arrays"
            android:prompt="@string/color_filter_label" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin">

        <TextView
            android:id="@+id/tvImageType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/dialog_margin"
            android:text="@string/image_type_label" />

        <Spinner
            android:id="@+id/spImageType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvImageType"
            android:layout_toRightOf="@+id/tvImageType"
            android:drawSelectorOnTop="true"
            android:entries="@array/image_type_arrays"
            android:prompt="@string/image_type_label" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin">

        <TextView
            android:id="@+id/tvSiteFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/dialog_margin"
            android:text="@string/site_filter_label" />

        <EditText
            android:id="@+id/etSiteFilter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvSiteFilter"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvSiteFilter" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_margin"

        android:layout_marginTop="@dimen/dialog_margin">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnCancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/cancel" />

    </RelativeLayout>


</LinearLayout>